# Qwen3-TTS-ncnn

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: mingw-w64-x86_64.toolchain.cmake
docs/: ncnn_llm_pr_plan.md  vulkan-ar-decode-perf.md
examples/: bench.cpp  e2e_codes.cpp  e2e_cv.cpp  e2e_icl.cpp  make_xvec.cpp  smoke_talker.cpp  test_sampler.cpp  test_tokenizer.cpp  tts_cli.cpp  vk_probe.cpp
models/: model.json  tokenizer.txt
models-cv/: model.json
src/: manifest.h  mel.h  net_utils.cpp  net_utils.h  npy.h  qwen_bpe.cpp  qwen_bpe.h  sampler.h  split_rvq.h  tts_config.h  tts_pipeline.cpp  tts_pipeline.h  wav_io.h
tests/data/: cv_codes.npy  cv_text_ids.npy  e2e_codes.npy  e2e_text_ids.npy  e2e_xvec.npy  extra_en_codes.npy  extra_en_ids.npy  extra_mixed_codes.npy  extra_mixed_cpu_codes.npy  extra_mixed_ids.npy  icl_codes.npy  icl_ref_codes.npy  icl_ref_codes_cpu.npy  icl_ref_ids.npy  icl_xvec.npy  ids.npy  talker_in.npy  talker_prefill.npy  talker_step.npy  talker_step_in.npy  text_embed.npy
tools/: run_bench_matrix.sh
tools/convert/: add_kvcache.py  common.py  export_codec.py  export_decoder.py  export_mimi.py  export_small_nets.py  export_speaker.py  export_tokenizer.py  gen_cpp_testdata.py  gen_e2e_inputs.py  gen_sampler_testdata.py  make_model_json.py  ref_customvoice.py  ref_e2e_greedy.py  ref_e2e_icl.py  requirements.txt  shim_qwen_tts.py  test_codec_parity.py  test_e2e_greedy.py  test_predictor_kv_parity.py  test_talker_kv_parity.py
